<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_marcogeneral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuarioActivity">

    <LinearLayout
        android:id="@+id/ll_marcoespecifico"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFondo"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_imagen_logo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/logo_unir" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_nombreusuario"
                android:fontFamily="@font/nunitosans_extralight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/izquierda"
                android:layout_marginRight="@dimen/derecha"
                android:hint="@string/registro_nombre_usuario"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_nombres"
                android:fontFamily="@font/nunitosans_extralight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_nombres"
                android:maxLength="20"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/izquierda"
                android:layout_marginRight="@dimen/derecha"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_apellido"
                android:fontFamily="@font/nunitosans_extralight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_apellidos"
                android:maxLength="20"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/izquierda"
                android:layout_marginRight="@dimen/derecha"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_correo_electronico"
                android:fontFamily="@font/nunitosans_extralight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_correo_electronico"
                android:maxLength="25"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="@dimen/izquierda"
                android:layout_marginRight="@dimen/derecha"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_pais"
                android:fontFamily="@font/nunitosans_extralight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_pais"
                android:maxLength="25"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginLeft="@dimen/izquierda"
                android:layout_marginRight="@dimen/derecha"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_region"
                android:fontFamily="@font/nunitosans_extralight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_region"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginLeft="@dimen/izquierda"
                android:layout_marginRight="@dimen/derecha"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_ciudad"
                android:fontFamily="@font/nunitosans_extralight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_ciudad"
                android:maxLength="30"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/izquierda"
                android:layout_marginRight="@dimen/derecha"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/contrasena"
                android:fontFamily="@font/nunitosans_extralight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_contraseña"
                android:imeActionId="6"
                android:imeActionLabel="@string/registro_contraseña"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/izquierda"
                android:layout_marginRight="@dimen/derecha"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/repite_contrasena"
                android:fontFamily="@font/nunitosans_extralight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_repite_contraseña"
                android:imeActionId="6"
                android:imeActionLabel="@string/registro_repite_contraseña"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/izquierda"
                android:layout_marginRight="@dimen/derecha"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBoton"
            android:textColor="@color/colorBoton_letras"
            android:fontFamily="@font/nunitosans_bold"
            android:layout_marginTop="16dp"
            android:text="@string/registro_crear" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBoton"
            android:textColor="@color/colorBoton_letras"
            android:fontFamily="@font/nunitosans_bold"
            android:layout_marginTop="16dp"
            android:text="@string/registro_cancelar" />

        <TextView
            android:id="@+id/tv_vermas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/registro_mas_informacion" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>