<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recordar_UsuarioActivity">

    <LinearLayout
        android:id="@+id/ll_marcoespecifico"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFondo"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_imagen_logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo_unir" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_correo_electronico"
            android:fontFamily="@font/nunitosans_extralight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recordar_correo_electronico"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/margen_izquierda"
            android:layout_marginRight="@dimen/margen_derecha"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBoton"
        android:layout_marginTop="16dp"
        android:text="@string/recordar_aceptar" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBoton"
        android:textColor="@color/colorBoton_letras"
        android:fontFamily="@font/nunitosans_bold"
        android:layout_marginTop="16dp"
        android:text="@string/recordar_cancelar" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>